# agent-voice

./: .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml
agent_voice/: __init__.py  hermes_config.py  mute_state.py  server.py  voices.py
codex_tts/: __init__.py  server.py  voices.py
docs/: hermes.md  spec.md
scripts/: agent-speak  agent-voice  agent-voice-summary  codex-speak  codex-tts  codex-voice-summary  sync-installed
tests/: test_fastapi_contract.py  test_hermes_configure.py  test_installer_contract.py  test_public_sensitivity.py  test_shell_helpers.py
tests/helpers/: public_contract.py
