[project]
name = "agent-voice"
version = "0.2.1"
description = "macOS Apple Silicon speech and transcription server for local agents"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.135.3",
    "numpy>=2.0.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.20",
    "ruamel-yaml>=0.18.0",
    "soundfile>=0.13.0",
    "uvicorn>=0.44.0",
]

[project.optional-dependencies]
mlx = [
    "mlx-audio @ git+https://github.com/Blaizzy/mlx-audio.git@b1dae64fff00fa950854db288255ed639b9019e7",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
